--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 # https://pre-commit.com
 default_install_hook_types: [commit-msg, pre-commit]
 default_stages: [commit, manual]
+default_language_version:
+    python: python3.10
 fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pygrep-hooks
