--- a/example_content/evil_science_server_settings.yaml
+++ b/example_content/evil_science_server_settings.yaml
@@ -10,7 +10,7 @@ adventure_tags:
   - comedy
   - modern-day
 narrative_tone: humorous science fiction, similar to Hitchhiker's Guide
-narrative_voice: dry humor young adult novel
+narrative_voice: gen-z teenager
 adventure_background: >-
   The main characters work for Science Ventures, Inc., a company whose goal is
   to stealthily take over the world through scientific discovery. The company
