Run multiple characters

--- a/example_content/christine.yaml
+++ b/example_content/christine.yaml
@@ -1,5 +1,5 @@
-name: Christine the Chemist
-background: Christine studied chemistry at Northwestern University.  She wanted
+name: Christine
+background: Christine is a chemist. Christine studied chemistry at Northwestern University.  She wanted
   to be a chemist since she was 5 and received her first chemistry
   set.  Before starting at Science Ventures, she was working for Big Pharma,
   but then decided she may as well go full-evil.
