--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ __pycache__
 logs/
 **/.DS_Store
 .pytest_cache
-harness_output/*.txt
-harness_output/*.md
+harness_output/**/*.txt
+harness_output/**/*.md
