--- a/example_content/rosie.yaml
+++ b/example_content/rosie.yaml
@@ -12,7 +12,7 @@ background: >-
   She has also started her own garage, where she teaches young enthusiasts how to drive and maintain manual cars, 
   hoping to inspire a new generation of manual transmission lovers.
 description: >-
-  osie Redline is a striking and audacious heroine with a fiery passion for the automotive industry.  She has a 
+  Rosie Redline is a striking and audacious heroine with a fiery passion for the automotive industry.  She has a 
   lean, muscular build. Her fiery red hair, often tied back in a bandana, matches her fiery spirit and determination. 
   Her eyes, a captivating shade of steel blue, glimmer with an unquenchable thirst for knowledge and a relentless 
   drive for innovation.
